# dwiprep

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  bids_filter.json  conf.py  crash-20211101-132026-groot-denoise-4b784d4a-2a2e-47db-86c1-ec8c57c41320.pklz  crash-20211101-132026-groot-mrcat-86d45258-7215-46df-acdb-452bc0eee79a.pklz  graph.dot  index.rst  pyproject.toml  setup.cfg  setup.py  sub-333_ses-1_dir-ap_space-dwi_fa_flirt.mat  tox.ini
.github/: ISSUE_TEMPLATE.md
bbreg_wf/: graph.json  graph1.json
dmriprep_wf/: graph.json  graph1.json
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/modules/: dwiprep.interfaces.rst  dwiprep.rst  dwiprep.utils.bids_query.rst  dwiprep.utils.rst  dwiprep.workflows.coreg.pipelines.apply_transform.rst  dwiprep.workflows.coreg.pipelines.epi_reg.rst  dwiprep.workflows.coreg.pipelines.rst  dwiprep.workflows.coreg.rst  dwiprep.workflows.dmri.pipelines.conversions.rst  dwiprep.workflows.dmri.pipelines.derivatives.rst  dwiprep.workflows.dmri.pipelines.epi_ref.rst  dwiprep.workflows.dmri.pipelines.fmap_prep.rst  dwiprep.workflows.dmri.pipelines.preprocess.rst  dwiprep.workflows.dmri.pipelines.rst  dwiprep.workflows.dmri.pipelines.tensor_estimation.rst  dwiprep.workflows.dmri.rst  dwiprep.workflows.rst  dwiprep.workflows.smri.rst  dwiprep.workflows.smri.utils.rst  modules.rst
dwi_conversion/: graph.json  graph1.json
dwiprep/: cli.py
dwiprep/utils/bids_query/: bids_query.py
dwiprep/workflows/dmri/: dmriprep.py
dwiprep/workflows/smri/: smriprep.py  smriprep_manager.py
preprocess/: graph.json  graph1.json
single_subject_242_wf/: graph.json  graph1.json
src/dwiprep/: __init__.py  cli.py  dwiprep.py
src/dwiprep/data/: bids_specifications.json  dwiprep.json
src/dwiprep/interfaces/: dds.py  dwiextract.py  mrconvert.py
test/: graph.json  graph1.json
tests/: __init__.py  fixtures.py  test_dwiprep.py
tests/test_utils/: test_bids_query.py
trial/: graph.json  graph1.json
(+104 files in other folders)
