[metadata]
name = dwiprep
version = 0.1.0
author = Gal Ben-Zvi
author_email = hershkovitz1@mail.tau.ac.il
description = dMRI preprocessing pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_files = LICENSE
keywords = mri, dmri, preprocessing
url = https://github.com/GalBenZvi/dwiprep
project_urls =
    Source = https://github.com/GalBenZvi/dwiprep/
    Documentation = https://dwiprep.readthedocs.io/en/latest/
    Bug Reports = https://github.com/GalBenZvi/dwiprep/issues/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    click
    numpy
    pybids

[options.extras_require]
dev =
    black==21.5b1
    coverage[toml]~=5.5
    doc8~=0.8
    flake8~=3.7
    ipython
    isort~=5.8
    pytest~=6.2
    sphinx~=4.0
    sphinx-rtd-theme~=0.5
    tox~=3.23

[options.packages.find]
where = src

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:dwiprep/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    docs,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401
    */messages.py: E501

[tool:pytest]
collect_ignore = ['setup.py']
